--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -17,3 +17,6 @@ $g-black-lighter:#353535;
 $g-black-darker:#303030;
 
 $light-green: #0f9d5827;
+
+$conferenceBg: #2b2c33;
+$conferenceBottomBg: #1f1f1f;
