--- a/src/app/feature-modules/doctor/meetup-lobby/meetup-lobby.component.html
+++ b/src/app/feature-modules/doctor/meetup-lobby/meetup-lobby.component.html
@@ -108,7 +108,7 @@
                                            
                                   <div fxLayout="row" fxLayoutGap="10px">
                                     <button mat-flat-button class="lighter-button" (click)="finalizeCurrent(true)">Mark Pending</button>
-                                    <button mat-raised-button >Start Meeting</button>
+                                    <button mat-raised-button (click)="navigateToMeeting(currentQueue.getCurrentPatient())">Start Meeting</button>
                                 </div>
                                   </mat-card-content>
                                   
